// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericInput snapshot tests NumericInput is disabled 1`] = `
<input
  className="input disabled"
  disabled={true}
  onChange={[Function]}
  readOnly={false}
  value=""
/>
`;

exports[`NumericInput snapshot tests NumericInput is readOnly 1`] = `
<input
  className="input"
  disabled={false}
  onChange={[Function]}
  readOnly={true}
  value=""
/>
`;

exports[`NumericInput snapshot tests NumericInput renders correctly 1`] = `
<input
  className="input"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  value=""
/>
`;

exports[`NumericInput snapshot tests NumericInput renders with a value 1`] = `
<input
  className="input"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  value="555.333"
/>
`;

exports[`NumericInput snapshot tests NumericInput renders with an error 1`] = `
<input
  className="input errored"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  value=""
/>
`;

exports[`NumericInput snapshot tests NumericInput renders with enforceMax 1`] = `
<input
  className="input"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  value=""
/>
`;

exports[`NumericInput snapshot tests NumericInput renders with enforceMin 1`] = `
<input
  className="input"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  value=""
/>
`;

exports[`NumericInput snapshot tests NumericInput renders with maxAfterDot 1`] = `
<input
  className="input"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  value=""
/>
`;

exports[`NumericInput snapshot tests NumericInput renders with maxBeforeDot 1`] = `
<input
  className="input"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  value=""
/>
`;

exports[`NumericInput snapshot tests NumericInput renders with maxValue 1`] = `
<input
  className="input"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  value=""
/>
`;

exports[`NumericInput snapshot tests NumericInput renders with minValue 1`] = `
<input
  className="input"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  value=""
/>
`;

exports[`NumericInput snapshot tests NumericInput renders with placeholder 1`] = `
<input
  className="input"
  disabled={false}
  onChange={[Function]}
  placeholder="0.0000"
  readOnly={false}
  value=""
/>
`;
